--- a/templates/default/modules/http_realip.conf.erb
+++ b/templates/default/modules/http_realip.conf.erb
@@ -1,7 +1,7 @@
-<% node['nginx']['realip']['addresses'].each do |address| %>
+<% node['nginx']['realip']['addresses'].each do |address| -%>
 set_real_ip_from <%= address %>;
-<% end %>
+<% end -%>
 real_ip_header <%= node['nginx']['realip']['header'] %>;
-<% if node['nginx']['version'] >= '1.2.1' -%>
+<% if node['nginx']['version'].to_f >= '1.2' -%>
 real_ip_recursive <%= node['nginx']['realip']['real_ip_recursive'] %>;
 <% end -%>
