Align the config with the default config a bit
Avoid unnecessary diffs

Signed-off-by: Tim Smith <tsmith@chef.io>

--- a/templates/default/nginx-upstart.conf.erb
+++ b/templates/default/nginx-upstart.conf.erb
@@ -10,9 +10,9 @@ env PID=<%= node['nginx']['pid'] %>
 env CONFIG=<%= node['nginx']['source']['conf_path'] %>
 
 respawn
-<% if node['nginx']['upstart']['respawn_limit'] %>
+<% if node['nginx']['upstart']['respawn_limit'] -%>
 respawn limit <%= node['nginx']['upstart']['respawn_limit'] %>
-<% end %>
+<% end -%>
 
 pre-start script
   ${DAEMON} -t
@@ -21,19 +21,19 @@ pre-start script
   fi
 end script
 
-<% unless node['nginx']['upstart']['foreground'] %>
+<% unless node['nginx']['upstart']['foreground'] -%>
 expect fork
-<% else %>
+<% else -%>
 console output
-<% end %>
+<% end -%>
 
 exec ${DAEMON} -c "${CONFIG}"
 
-<% if node.recipe?('chef_nginx::passenger') and not node['nginx']['upstart']['foreground'] %>
+<% if node.recipe?('chef_nginx::passenger') && !node['nginx']['upstart']['foreground'] -%>
 # classic example of why pidfiles should have gone away
 # with the advent of fork().  we missed that bus a long
 # time ago so hack around it.
 post-stop script
   start-stop-daemon --stop --pidfile ${PID} --name nginx --exec ${DAEMON} --signal QUIT
 end script
-<% end %>
+<% end -%>
