--- a/templates/default/modules/http_realip.conf.erb
+++ b/templates/default/modules/http_realip.conf.erb
@@ -2,6 +2,6 @@
 set_real_ip_from <%= address %>;
 <% end -%>
 real_ip_header <%= node['nginx']['realip']['header'] %>;
-<% if node['nginx']['version'].to_f >= '1.2' -%>
+<% if node['nginx']['version'].to_f >= 1.2 -%>
 real_ip_recursive <%= node['nginx']['realip']['real_ip_recursive'] %>;
 <% end -%>
