Determine pidfile location correctly via a helper
Debian/Ubuntu changed their pidfile location, but the upstream packages haven’t changed. This leads to an evil if statement that doesn’t work in attribute form due to overrides. Move this logic to a helper and remove the attribute. This is probably the first of many things that will move to helpers instead of attributes.

Signed-off-by: Tim Smith <tsmith@chef.io>

--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -8,7 +8,7 @@ worker_rlimit_nofile <%= node['nginx']['worker_rlimit_nofile'] %>;
 <% end -%>
 
 error_log  <%= node['nginx']['log_dir'] %>/error.log<% if node['nginx']['error_log_options'] %> <%= node['nginx']['error_log_options'] %><% end %>;
-pid        <%= node['nginx']['pid'] %>;
+pid        <%= @pid_file %>;
 events {
   worker_connections  <%= node['nginx']['worker_connections'] %>;
 <% if node['nginx']['multi_accept'] -%>
