--- a/templates/default/nginx-upstart.conf.erb
+++ b/templates/default/nginx-upstart.conf.erb
@@ -6,7 +6,7 @@ start on (local-filesystems and net-device-up IFACE=lo and runlevel [<%= node['n
 stop on runlevel [!<%= node['nginx']['upstart']['runlevels'] %>]
 
 env DAEMON=<%= node['nginx']['binary'] %>
-env PID=<%= node['nginx']['pid'] %>
+env PID=<%= @pid_file %>
 env CONFIG=<%= node['nginx']['source']['conf_path'] %>
 
 respawn
