support `worker_shutdown_timeout` released in 1.11.11
changelog: http://nginx.org/en/CHANGES
docs about it: http://nginx.org/en/docs/ngx_core_module.html#worker_shutdown_timeout

Signed-off-by: Andrews Medina <andrewsmedina@gmail.com>

--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -6,6 +6,9 @@ daemon off;
 <% if node['nginx']['worker_rlimit_nofile'] -%>
 worker_rlimit_nofile <%= node['nginx']['worker_rlimit_nofile'] %>;
 <% end -%>
+<% if node['nginx']['worker_shutdown_timeout'] -%>
+worker_shutdown_timeout <%= node['nginx']['worker_shutdown_timeout'] %>;
+<% end -%>
 <% node['nginx']['load_modules'].each do |module_to_load| %>
 load_module <%= module_to_load %>;
 <% end -%>
