--- a/templates/default/nginx.service.erb
+++ b/templates/default/nginx.service.erb
@@ -3,6 +3,8 @@ Description=The nginx HTTP and reverse proxy server
 After=network.target remote-fs.target nss-lookup.target
 
 [Service]
+Type=forking
+PIDFile=/run/nginx.pid
 ExecStartPre=<%= node['nginx']['binary'] %> -t
 ExecStart=<%= node['nginx']['binary'] %>
 ExecReload=/bin/kill -s HUP $MAINPID
