new feature: streams
Signed-off-by: David Siecinski <david.siecinski@impaq.com.pl>

--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -107,3 +107,4 @@ http {
   include <%= node['nginx']['dir'] %>/conf.d/*.conf;
   include <%= node['nginx']['dir'] %>/sites-enabled/*;
 }
+include <%= node['nginx']['dir'] %>/streams-enabled/*;
