--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -98,6 +98,15 @@ http {
   <% if node['nginx']['map_hash_max_size'] -%>
   map_hash_max_size <%= node['nginx']['map_hash_max_size'] %>;
   <% end -%>
+  <% if node['nginx']['proxy_buffer_size'] -%>
+  proxy_buffer_size <%= node['nginx']['proxy_buffer_size'] %>;
+  <% end -%>
+  <% if node['nginx']['proxy_buffers'] -%>
+  proxy_buffers <%= node['nginx']['proxy_buffers'] %>;
+  <% end -%>
+  <% if node['nginx']['proxy_busy_buffers_size'] -%>
+  proxy_busy_buffers_size <%= node['nginx']['proxy_busy_buffers_size'] %>;
+  <% end -%>
 
   <% if node['nginx']['enable_rate_limiting'] -%>
   limit_req_zone $binary_remote_addr zone=<%= node['nginx']['rate_limiting_zone_name'] %>:<%= node['nginx']['rate_limiting_backoff'] %> rate=<%= node['nginx']['rate_limit'] %>;
