source shouldn't determine if streams enabled

--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -122,8 +122,8 @@ http {
   include <%= node['nginx']['dir'] %>/conf.d/*.conf;
   include <%= node['nginx']['dir'] %>/sites-enabled/*;
 }
-<% if node['nginx']['install_method'] == 'source' and  node['nginx']['configure_flags'].include? '--with-stream'  %>
-stream{
+<% if node['nginx']['configure_flags'].include? '--with-stream'  %>
+stream {
   include <%= node['nginx']['dir'] %>/streams-enabled/*;
 }
 <% end %>
