Add parameter to enable JIT compilation of PCRE regexps
Signed-off-by: Hervé Werner <herve.werner@ledger.fr>

--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -16,6 +16,10 @@ load_module <%= module_to_load %>;
 include /etc/nginx/modules-enabled/*.conf;
 <% end -%>
 
+<% if node['nginx']['pcre_jit'] -%>
+pcre_jit on;
+<% end -%>
+
 error_log  <%= node['nginx']['log_dir'] %>/error.log<% if node['nginx']['error_log_options'] %> <%= node['nginx']['error_log_options'] %><% end %>;
 pid        <%= @pid_file %>;
 events {
