Add ability to override the nginx files and folders owner/group/mode
Implements #570
Closes #570

--- a/templates/default/list.conf.erb
+++ b/templates/default/list.conf.erb
@@ -7,7 +7,7 @@
 # No files to include
 <% else -%>
 # Include files
-<% @files.sort.each do |file| -%>
+<% @files.uniq.sort.each do |file| -%>
 include <%= file %>;
 <% end -%>
 <% end -%>
