Fixup the default site template and update nginx_site doc to match
Fixes #574

--- a/templates/default/default-site.erb
+++ b/templates/default/default-site.erb
@@ -7,9 +7,10 @@ server {
   server_name  <%= @server_name %>;
 
   access_log   <%= @nginx_log_dir %>/localhost.access.log;
+  error_log    <%= @nginx_log_dir %>/localhost.error.log;
 
   location / {
-    root   <%= @default_root %>;
-    index  index.html index.htm;
+    root       <%= @default_root %>;
+    index      index.html index.htm;
   }
 }
